# Work_Space

./: Projects.txt  README.md  file.txt
C Programming/: Armstrong number.c  Array - Copy.c  Functions.c  Hals Adder Logic - Copy.c  Leap Year - Copy.c  Learn C_ language - Copy.c  Power of an Integer.c  Prime Number - Copy.c  Untitled-1 - Copy.c  circle - Copy.c  findmind.c  getchar.c  getminmax.c  practice_in_pointers.c  sex tarek.c
C Programming/Binary to Decimal/: main - Copy.c
C Programming/faboccie/: main.c
C Programming/panter/: main.c  math_bit.h  panter.depend
C++_Project/Library Management System/: Lib_manage.cpp  lib.cpp  lib.h
Fundamentals with C++/: Test.cpp  powerpoint.cpp  tempCodeRunnerFile.c  test.cpp
Fundamentals with C++/Project/: CMakeLists.txt  main.cpp
Fundamentals with C++/Project/include/: calc.h
Fundamentals with C++/Project/lib/: CMakeLists.txt  wifi.cpp  wifi.h
Fundamentals with C++/Project/src/: calc.cpp
Learn.c/: 3D Array - Copy.c  Adding two numbers without using + operator - Copy.c  Half Adder Logic - Copy.c  Multipling 2 Matrixcese - Copy.c  Perfect number.c  Pyramid_of_stars - Copy.c  Untitled-7.c  interviwe2.c  repeted number2 - Copy.c
Python codes/: Untitled-1.disasm  Untitled-1.py  advanced try,except.py  colors.py  information.py  les4.py  opencv.py  opencv2.py  speed_test.py  test - Copy.py
learn/: tracking_object_by_color.py
opencv/: Face_detection.py  Video_captur_color.py  detect_and_save_face.py  readimg.py  save_video.py
unit_test/: CMakeLists.txt  main.cpp
zzzzzzC/: emotion_recognition.py  practice.py
(+618 files in other folders)
